Change List.of in SingletonList for having only one authority per user