@@ -10,6 +10,7 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -68,7 +69,7 @@ public class User implements UserDetails {
 
 	@Override
 	public Collection < ? extends GrantedAuthority > getAuthorities() {
-		return List.of(new SimpleGrantedAuthority(role.name()));
+		return Collections.singletonList(new SimpleGrantedAuthority(role.name()));
 	}
 
 	@Override
